Replaces `isMobile` test with media queries

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -19,20 +19,22 @@
   flex: 3;
 }
 
-.is-mobile .left-panel {
-  flex: 1;
-}
+@media (max-width: 600px) {
+  .left-panel {
+    flex: 1;
+  }
 
-.is-mobile .right-panel {
-  flex: 1;
-}
+  .right-panel {
+    flex: 1;
+  }
 
-.has-conversation.is-mobile .left-panel {
-  display: none;
-}
+  .messenger.has-conversation .left-panel {
+    display: none;
+  }
 
-.is-mobile:not(.has-conversation) .right-panel {
-  display: none;
+  .messenger:not(.has-conversation) .right-panel {
+    display: none;
+  }
 }
 
 layer-conversation-list {
