--- a/src/css/widgets.css
+++ b/src/css/widgets.css
@@ -1,3 +1,8 @@
 layer-compose-bar layer-menu-button span {
   font-size: 28px;
 }
+@media (max-width: 299px) {
+  layer-send-button {
+    display: none !important;
+  }
+}
