--- a/src/css/panel-headers.css
+++ b/src/css/panel-headers.css
@@ -30,7 +30,7 @@
 }
 .conversations-header {
   color: rgb(255, 255, 255);
-  padding: 8px 8x 8px 0px;
+  padding: 8px 8px 8px 0px;
   background-color: rgb(25, 165, 228);
   text-align: left;
   text-transform: uppercase;
